# Dialectro

./: README.md  main.py  pyproject.toml
